--- a/PrototypeEDUCOM.csproj
+++ b/PrototypeEDUCOM.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Model\user.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\Customer\AddCustomerViewModel.cs" />
+    <Compile Include="ViewModel\Customer\AddStudentModelView.cs" />
     <Compile Include="ViewModel\Customer\CustomerViewModel.cs" />
     <Compile Include="ViewModel\Customer\DeleteCustomerViewModel.cs" />
     <Compile Include="ViewModel\Customer\EditCustomerViewModel.cs" />
@@ -125,6 +126,9 @@
     <Compile Include="ViewModel\RelayCommand.cs" />
     <Compile Include="View\Customer\AddCustomerView.xaml.cs">
       <DependentUpon>AddCustomerView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Customer\AddStudentView.xaml.cs">
+      <DependentUpon>AddStudentView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Customer\CustomerUCView.xaml.cs">
       <DependentUpon>CustomerUCView.xaml</DependentUpon>
@@ -187,6 +191,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="View\Customer\AddCustomerView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Customer\AddStudentView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
