--- a/PrototypeEDUCOM.csproj
+++ b/PrototypeEDUCOM.csproj
@@ -90,6 +90,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Helper\Enum\Civility.cs" />
     <Compile Include="Helper\Enum\EnumDb.cs" />
     <Compile Include="Helper\Enum\Gender.cs" />
     <Compile Include="Helper\Enum\Kinship.cs" />
@@ -120,6 +121,7 @@
     <Compile Include="ViewModel\Customer\AddStudentViewModel.cs" />
     <Compile Include="ViewModel\Customer\CustomerViewModel.cs" />
     <Compile Include="ViewModel\Customer\DeleteCustomerViewModel.cs" />
+    <Compile Include="ViewModel\Customer\DeleteStudentViewModel.cs" />
     <Compile Include="ViewModel\Customer\EditCustomerViewModel.cs" />
     <Compile Include="ViewModel\Customer\EditStudentViewModel.cs" />
     <Compile Include="ViewModel\Customer\ListCustomerViewModel.cs" />
@@ -141,6 +143,9 @@
     </Compile>
     <Compile Include="View\Customer\CustomerUCView.xaml.cs">
       <DependentUpon>CustomerUCView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Customer\DeleteStudentView.xaml.cs">
+      <DependentUpon>DeleteStudentView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Customer\DeleteCustomerView.xaml.cs">
       <DependentUpon>DeleteCustomerView.xaml</DependentUpon>
@@ -227,6 +232,10 @@
     <Page Include="View\Customer\CustomerUCView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Customer\DeleteStudentView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="View\Customer\DeleteCustomerView.xaml">
       <SubType>Designer</SubType>
