--- a/PrototypeEDUCOM.csproj
+++ b/PrototypeEDUCOM.csproj
@@ -136,6 +136,7 @@
     <Compile Include="ViewModel\Organisation\AddOrganisationViewModel.cs" />
     <Compile Include="ViewModel\Organisation\ListOrganisationViewModel.cs" />
     <Compile Include="ViewModel\Organisation\OrganisationViewModel.cs" />
+    <Compile Include="ViewModel\Organisation\ShowOrganisationViewModel.cs" />
     <Compile Include="ViewModel\RelayCommand.cs" />
     <Compile Include="View\Control\Block.xaml.cs" />
     <Compile Include="View\Control\LoadingAnimation.xaml.cs" />
@@ -183,6 +184,9 @@
     </Compile>
     <Compile Include="View\Organisation\OrganisationUCView.xaml.cs">
       <DependentUpon>OrganisationUCView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Organisation\ShowOrganisationUCView.xaml.cs">
+      <DependentUpon>ShowOrganisationUCView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -282,6 +286,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Organisation\OrganisationUCView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Organisation\ShowOrganisationUCView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
