Ajout et modification des Programmes

--- a/PrototypeEDUCOM.csproj
+++ b/PrototypeEDUCOM.csproj
@@ -129,12 +129,15 @@
     <Compile Include="ViewModel\Customer\EditStudentViewModel.cs" />
     <Compile Include="ViewModel\Customer\ListCustomerViewModel.cs" />
     <Compile Include="ViewModel\Customer\ShowCustomerViewModel.cs" />
+    <Compile Include="ViewModel\Organisation\AddProgramViewModel.cs" />
     <Compile Include="ViewModel\Dashboard\DashboardViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\MediatorViewModel.cs" />
     <Compile Include="ViewModel\Organisation\AddOrganisationViewModel.cs" />
     <Compile Include="ViewModel\Organisation\DeleteOrganisationViewModel.cs" />
+    <Compile Include="ViewModel\Organisation\EditOrganisationViewModel.cs" />
+    <Compile Include="ViewModel\Organisation\EditProgramViewModel.cs" />
     <Compile Include="ViewModel\Organisation\ListOrganisationViewModel.cs" />
     <Compile Include="ViewModel\Organisation\OrganisationViewModel.cs" />
     <Compile Include="ViewModel\Organisation\ShowOrganisationViewModel.cs" />
@@ -180,8 +183,14 @@
     <Compile Include="View\Organisation\AddOrganisationView.xaml.cs">
       <DependentUpon>AddOrganisationView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Organisation\AddProgramView.xaml.cs">
+      <DependentUpon>AddProgramView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Organisation\DeleteOrganisationView.xaml.cs">
       <DependentUpon>DeleteOrganisationView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Organisation\EditProgramView.xaml.cs">
+      <DependentUpon>EditProgramView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Organisation\ListOrganisationUCView.xaml.cs">
       <DependentUpon>ListOrganisationUCView.xaml</DependentUpon>
@@ -285,7 +294,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\Organisation\AddProgramView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\Organisation\DeleteOrganisationView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Organisation\EditProgramView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
