--- a/PrototypeEDUCOM.csproj
+++ b/PrototypeEDUCOM.csproj
@@ -136,11 +136,13 @@
     <Compile Include="ViewModel\MediatorViewModel.cs" />
     <Compile Include="ViewModel\Organisation\AddOrganisationViewModel.cs" />
     <Compile Include="ViewModel\Organisation\DeleteOrganisationViewModel.cs" />
+    <Compile Include="ViewModel\Organisation\DeleteProgramViewModel.cs" />
     <Compile Include="ViewModel\Organisation\EditOrganisationViewModel.cs" />
     <Compile Include="ViewModel\Organisation\EditProgramViewModel.cs" />
     <Compile Include="ViewModel\Organisation\ListOrganisationViewModel.cs" />
     <Compile Include="ViewModel\Organisation\OrganisationViewModel.cs" />
     <Compile Include="ViewModel\Organisation\ShowOrganisationViewModel.cs" />
+    <Compile Include="ViewModel\Organisation\ShowProgramViewModel.cs" />
     <Compile Include="ViewModel\RelayCommand.cs" />
     <Compile Include="View\Control\Block.xaml.cs" />
     <Compile Include="View\Control\LoadingAnimation.xaml.cs" />
@@ -189,6 +191,9 @@
     <Compile Include="View\Organisation\DeleteOrganisationView.xaml.cs">
       <DependentUpon>DeleteOrganisationView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Organisation\DeleteProgramView.xaml.cs">
+      <DependentUpon>DeleteProgramView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Organisation\EditProgramView.xaml.cs">
       <DependentUpon>EditProgramView.xaml</DependentUpon>
     </Compile>
@@ -200,6 +205,9 @@
     </Compile>
     <Compile Include="View\Organisation\ShowOrganisationUCView.xaml.cs">
       <DependentUpon>ShowOrganisationUCView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Organisation\ShowProgramUCView.xaml.cs">
+      <DependentUpon>ShowProgramUCView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -302,6 +310,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\Organisation\DeleteProgramView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\Organisation\EditProgramView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -315,6 +327,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Organisation\ShowOrganisationUCView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Organisation\ShowProgramUCView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
