mise a jour edit et add organisation + icon program et campus

--- a/PrototypeEDUCOM.csproj
+++ b/PrototypeEDUCOM.csproj
@@ -456,7 +456,10 @@
     <Resource Include="Ressource\demandes.png" />
     <Resource Include="Ressource\titleAddDemande.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Ressource\titleAddCampus.png" />
+    <Resource Include="Ressource\titleAddProgram.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
