modif de toute les vues de suppression

--- a/PrototypeEDUCOM.csproj
+++ b/PrototypeEDUCOM.csproj
@@ -468,6 +468,9 @@
     <Resource Include="Ressource\titleAddCampus.png" />
     <Resource Include="Ressource\titleAddProgram.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressource\archive.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
